Fixed agent skill invocation